added new changes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div>
+        <img src="images/Pasted image.png" alt="Magina">
+    </div>
     <h1> Welcome to Moringa School</h1>
     <h3> My Hobbies</h3>
     <ul>
